[package]
name = "rust-web-scraper"
version = "0.1.0"
authors = ["Cesar D. Velandia <cesar@velandia.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
select = "0.4.3"